--- a/MVC_HW/Views/SalesOrders/search.cshtml
+++ b/MVC_HW/Views/SalesOrders/search.cshtml
@@ -7,7 +7,7 @@
 <h2>search</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("SearchResult", "SalesOrders", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     
@@ -50,7 +50,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.OrderDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.OrderDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.OrderDate, new{ @class = "form-control" ,type= "datetime-local" } )
                 @Html.ValidationMessageFor(model => model.OrderDate, "", new { @class = "text-danger" })
             </div>
         </div>
