--- a/MVC_HW/Views/SalesOrders/Index.cshtml
+++ b/MVC_HW/Views/SalesOrders/Index.cshtml
@@ -12,10 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.CustomID)
+            @Html.DisplayNameFor(model => model.CompanyName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EmployeeID)
+            @Html.DisplayNameFor(model => model.EmployeeName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.OrderDate)
@@ -26,9 +26,7 @@
         <th>
             @Html.DisplayNameFor(model => model.ShippedDate)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShipperID)
-        </th>
+       
         <th>
             @Html.DisplayNameFor(model => model.Freight)
         </th>
@@ -53,10 +51,10 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.CustomID)
+            @Html.DisplayFor(modelItem => item.CompanyName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.EmployeeID)
+            @Html.DisplayFor(modelItem => item.EmployeeName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.OrderDate)
@@ -67,9 +65,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.ShippedDate)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShipperID)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.Freight)
         </td>
