--- a/MVC_HW/Views/SalesOrders/Edit.cshtml
+++ b/MVC_HW/Views/SalesOrders/Edit.cshtml
@@ -18,17 +18,17 @@
         @Html.HiddenFor(model => model.OrderID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CustomID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CustomerID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("CustomerID", (IEnumerable<SelectListItem>)ViewBag.SL, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CustomID, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.EmployeeID, new SelectList(ViewBag.SL, "ShipperID", "CompanyName"), new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CustomerID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.EmployeeID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("EmployeeID", (IEnumerable<SelectListItem>)ViewBag.EL, new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.EmployeeID,new SelectList(ViewBag.EL, "EmployeeID", "FullName"), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.EmployeeID, "", new { @class = "text-danger" })
             </div>
         </div>
