--- a/MVC_HW/Views/SalesOrders/Edit.cshtml
+++ b/MVC_HW/Views/SalesOrders/Edit.cshtml
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CustomerID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.EmployeeID, new SelectList(ViewBag.SL, "ShipperID", "CompanyName"), new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.EmployeeID, new SelectList(ViewBag.CL, "CustomerID", "CompanyName"), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CustomerID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -60,7 +60,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ShipperID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ShipperID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ShipperID, new SelectList(ViewBag.SL, "ShipperID", "CompanyName"), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ShipperID, "", new { @class = "text-danger" })
             </div>
         </div>
