--- a/MVC_HW/Views/SalesOrders/Edit.cshtml
+++ b/MVC_HW/Views/SalesOrders/Edit.cshtml
@@ -28,7 +28,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EmployeeID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.EmployeeID,(SelectList)ViewBag.EL, new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.EmployeeID,new SelectList(ViewBag.EL, "EmployeeID", "FullName"), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.EmployeeID, "", new { @class = "text-danger" })
             </div>
         </div>
