--- a/MVC_HW/Views/SalesOrders/search.cshtml
+++ b/MVC_HW/Views/SalesOrders/search.cshtml
@@ -26,10 +26,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CustomerID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.CustomerID, new SelectList(ViewBag.CL, "CustomerID", "CompanyName"), new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CustomerID, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -37,7 +37,7 @@
             @Html.LabelFor(model => model.EmployeeID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 
-                @Html.DropDownList("EmployeeID", (IEnumerable<SelectListItem>)ViewBag.EL,  new { @class = "form-control" } )
+                @Html.DropDownListFor(model => model.EmployeeID, new SelectList(ViewBag.EL, "EmployeeID", "FullName"), new { @class = "form-control" })
 
 
                 @Html.ValidationMessageFor(model => model.EmployeeID, "", new { @class = "text-danger" })
@@ -47,7 +47,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ShippingID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ShippingID", (IEnumerable<SelectListItem>)ViewBag.SL, new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.ShippingID, new SelectList(ViewBag.SL, "ShipperID", "CompanyName"), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ShippingID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -79,7 +79,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Search" class="btn btn-default" />
             </div>
         </div>
     </div>
