--- a/MVC_HW/Views/SalesOrders/Create.cshtml
+++ b/MVC_HW/Views/SalesOrders/Create.cshtml
@@ -18,6 +18,8 @@
 
 
         <table>
+
+           
             <tr>
                 <td class="control-label  col-md-2">
                    
@@ -51,6 +53,25 @@
                     
                 </td>
 </tr>
+
+
+           
+
+
+
+            <tr>
+                <td class="control-label col-md-2">
+
+                    @Html.LabelFor(model => model.ShipName, htmlAttributes: new { @class = "control-label " })
+
+                </td>
+                <td class="col-md-10">
+
+                    @Html.EditorFor(model => model.ShipName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ShipName, "", new { @class = "text-danger" })
+
+                </td>
+            </tr>
 
             <tr>
                 <td class="control-label col-md-2">
