--- a/MVC_HW/Views/SalesOrders/Delete.cshtml
+++ b/MVC_HW/Views/SalesOrders/Delete.cshtml
@@ -15,11 +15,11 @@
             @Html.DisplayNameFor(model => model.OrderID)
         </dt>
         <dt>
-            @Html.DisplayNameFor(model => model.CustomID)
+            @Html.DisplayNameFor(model => model.CusCompanyName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CustomID)
+            @Html.DisplayFor(model => model.ShipCompanyName)
         </dd>
 
         <dt>
