--- a/MVC_HW/Views/SalesOrders/Index.cshtml
+++ b/MVC_HW/Views/SalesOrders/Index.cshtml
@@ -79,7 +79,7 @@
         </td>
         
         <td>
-            @Html.DisplayFor(modelItem => item.Freight)
+            @Html.DisplayFor(modelItem => item.Freight);
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ShipAddress)
