--- a/MVC_HW/Views/Shared/_Layout.cshtml
+++ b/MVC_HW/Views/Shared/_Layout.cshtml
@@ -7,6 +7,10 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+
+    <link href="~/Content/kendo.default.min.css" rel="stylesheet" />
+    <link href="~/Content/kendo.common.min.css" rel="stylesheet" />
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -36,5 +40,11 @@
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+
+    <script src="~/scripts/messages/kendo.messages.zh-TW.min.js"></script>
+    <script src="~/scripts/cultures/kendo.culture.zh-TW.min.js"></script>
+    <script src="~/scripts/kendo.all.min.js"></script>
+
+
 </body>
 </html>
