--- a/MVC_HW/Views/SalesOrders/Index.cshtml
+++ b/MVC_HW/Views/SalesOrders/Index.cshtml
@@ -9,104 +9,8 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.OrderID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CusCompanyName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShipCompanyName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmployeeName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RequireDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShippedDate)
-        </th>
-       
-        <th>
-            @Html.DisplayNameFor(model => model.Freight)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShipAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShipCity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShipRegion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShipPostalCode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShipCountry)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.OrderID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CusCompanyName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShipCompanyName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmployeeName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OrderDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RequireDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShippedDate)
-        </td>
-        
-        <td>
-            @Html.DisplayFor(modelItem => item.Freight);
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShipAddress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShipCity)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShipRegion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShipPostalCode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShipCountry)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.OrderID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.OrderID }) |
-    <a onclick="Delete(@item.OrderID)">            delete</a>
-        </td>
-    </tr>
-
-}
-
-</table>
-<div id="tabletest">
+<div id="tabletest"></div>
 <script type="text/javascript">
    function Delete(id) {
        if (confirm('你確定要刪除嗎 ?')) {
@@ -128,40 +32,41 @@
 </script> 
 
 <script>
-        $(document).ready(function () {
-            $("#grid").kendoGrid({
-                dataSource: {
-                    type: "odata",
-                    transport: {
-                        read: "https://demos.telerik.com/kendo-ui/service/Northwind.svc/Customers"
+
+
+
+    $(document).ready(function () {
+        $.ajax({
+            url:"GetJsonList",
+            type:'Get',
+            success:function(resopnse){
+                $("#tabletest").kendoGrid({
+                    dataSource: {
+                        type: "Json",
+                        data:resopnse
+               
+
+
                     },
-                    pageSize: 20
-                },
-                height: 550,
-                groupable: true,
+                    height: 550,
+                    pageSize: 20,
+                    pageable: {
+                        pageSizes: true
+                    },
                 sortable: true,
-                pageable: {
-                    refresh: true,
-                    pageSizes: true,
-                    buttonCount: 5
-                },
-                columns: [{
-                    template: "<div class='customer-photo'" +
-                    "style='background-image: url(../content/web/Customers/#:data.CustomerID#.jpg);'></div>" +
-                    "<div class='customer-name'>#: ContactName #</div>",
-                    field: "ContactName",
-                    title: "Contact Name",
-                    width: 240
-                }, {
-                    field: "ContactTitle",
-                    title: "Contact Title"
-                }, {
-                    field: "CompanyName",
-                    title: "Company Name"
-                }, {
-                    field: "Country",
-                    width: 150
-                }]
-            });
+                reorderable: true,
+                resizable: true,
+                pageable: true,})},
+            error: function (xhr, ajaxOptions, thrownError) {
+                alert(xhr.status);
+                alert(thrownError);
+            }
+
+
+        
+        
+        
+        })
+          
         });
 </script>
