--- a/MVC_HW/Views/Shared/_Layout.cshtml
+++ b/MVC_HW/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     
     
-    <script src="~/Scripts/bootstrap.min.js"></script>  
+   <!-- <script src="~/Scripts/bootstrap.min.js"></script>  -->
     <link href="~/Content/kendo.default.min.css" rel="stylesheet" />
     <link href="~/Content/kendo.common.min.css" rel="stylesheet" />
     
