--- a/MVC_HW/Views/SalesOrders/search.cshtml
+++ b/MVC_HW/Views/SalesOrders/search.cshtml
@@ -9,7 +9,7 @@
 <h2>search</h2>
 
 
-@using (Html.BeginForm("SearchResult", "SalesOrders", FormMethod.Post))
+@using (Html.BeginForm("searchResult", "SalesOrders", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
@@ -45,10 +45,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ShippingID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ShipperID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.ShippingID, new SelectList(ViewBag.SL, "ShipperID", "CompanyName"), new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ShippingID, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.ShipperID, new SelectList(ViewBag.SL, "ShipperID", "CompanyName"), new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ShipperID, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -69,11 +69,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ShippedDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ShipedDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 
-                @Html.TextBoxFor(model => model.ShippedDate, new { htmlAttributes = new { @class = "form-control", } ,@type = "date" })
-                @Html.ValidationMessageFor(model => model.ShippedDate, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.ShipedDate, new { htmlAttributes = new { @class = "form-control", } ,@type = "date" })
+                @Html.ValidationMessageFor(model => model.ShipedDate, "", new { @class = "text-danger" })
             </div>
         </div>
 
